--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Balthazar&family=Pacifico&family=League Spartan&family=Oswald&family=Dongle&display=swap");
+
+*{
+    margin: 0;
+}
