--- a/src/app/Screens/landing-page/landing-page.component.html
+++ b/src/app/Screens/landing-page/landing-page.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="order-button">
 
-        <button (click)="navigateTo('login')">
+        <button (click)="navigateTo('main')">
             Order Now
         </button>
     </div>
